/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.5.1/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'java'
    id 'application'
}

run {
    standardInput = System.in
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // lucene
    implementation 'org.apache.lucene:lucene-core:10.4.0'
    implementation 'org.apache.lucene:lucene-queryparser:10.4.0'
    implementation 'org.apache.lucene:lucene-analysis-common:10.4.0'

    // apache arrow
    implementation "org.apache.arrow:arrow-vector:15.0.2"
    implementation "org.apache.arrow:arrow-memory-netty:15.0.2"
    implementation "org.apache.arrow:arrow-dataset:15.0.2"

    // Tests
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Rendre silencieux le logger d'arrow (SLF4J)
    implementation 'org.slf4j:slf4j-nop:2.0.9'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.Main'

    // Options JVM requises par Apache Arrow
    applicationDefaultJvmArgs = [
        '--add-opens=java.base/java.nio=ALL-UNNAMED',
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
        '--enable-native-access=ALL-UNNAMED'
    ]
}

test {
    useJUnitPlatform()
}
